--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,11 +22,26 @@ pool:
 steps:
   - task: Maven@3
     inputs:
-      mavenPomFile: "pom.xml"
-      mavenOptions: "-Xmx3072m"
-      javaHomeOption: "JDKVersion"
-      jdkVersionOption: $(jdk_version)
-      jdkArchitectureOption: "x64"
+      mavenPomFile: 'pom.xml'
       publishJUnitResults: true
-      testResultsFiles: "**/TEST-*.xml"
+      testResultsFiles: '**/surefire-reports/TEST-*.xml'
+      codeCoverageToolOption: 'JaCoCo'
+      javaHomeOption: 'JDKVersion'
+      mavenVersionOption: 'Default'
+      mavenAuthenticateFeed: false
+      effectivePomSkip: false
+      sonarQubeRunAnalysis: true
+      sqMavenPluginVersionChoice: 'latest'
+      checkStyleRunAnalysis: true
+      pmdRunAnalysis: true
+      findBugsRunAnalysis: true
       goals: "package"
+  - task: CopyFiles@2
+    inputs:
+      Contents: '**'
+      TargetFolder: '$(build.artifactstagingdirectory)'
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
